force-app/main/default/objects/CheckIn_CMV__Visit__c/CheckIn_CMV__Visit__c.object-meta.xml
<CustomObject>
    <label>Visit</label>
    <nameField>
        <displayFormat>V-{0000000000}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>