force-app/main/default/objects/CheckIn_CMV__Visit__c/fields/CheckIn_CMV__Account__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_CMV__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>