force-app/main/default/objects/CheckIn_CMV__Visit__c/fields/CheckIn_CMV__Check_in_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_CMV__Check_in_Coordinates__c</fullName>
    <label>Check-in Coordinates</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>