force-app/main/default/objects/CheckIn_CMV__Visit__c/fields/CheckIn_CMV__Check_in_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_CMV__Check_in_Date_Time__c</fullName>
    <label>Check-in Date/Time</label>
    <type>DateTime</type>
</CustomField>