force-app/main/default/objects/CheckIn_CMV__Visit__c/fields/CheckIn_CMV__Check_in_Distance__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_CMV__Check_in_Distance__c</fullName>
    <inlineHelpText>In Kilometers</inlineHelpText>
    <label>Check-in Distance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>