force-app/main/default/objects/CheckIn_CMV__Visit__c/fields/CheckIn_CMV__Check_out_Comments__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_CMV__Check_out_Comments__c</fullName>
    <label>Check-out Comments</label>
    <type>TextArea</type>
</CustomField>