force-app/main/default/objects/CheckIn_CMV__Visit__c/fields/CheckIn_CMV__Check_out_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_CMV__Check_out_Coordinates__c</fullName>
    <label>Check-out Coordinates</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>