force-app/main/default/objects/CheckIn_CMV__Visit__c/fields/CheckIn_CMV__Check_out_Distance__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_CMV__Check_out_Distance__c</fullName>
    <description>Distance from check-out location to related object address.</description>
    <inlineHelpText>In Kilometers</inlineHelpText>
    <label>Check-out Distance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>