force-app/main/default/objects/CheckIn_CMV__Visit__c/fields/CheckIn_CMV__Compliance_Now__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_CMV__Compliance_Now__c</fullName>
    <formula>IF(CheckIn_CMV__Check_in_Distance__c &gt; $CustomMetadata.CheckIn_CMV__Visit_Compliance__mdt.CheckIn_CMV__Default.CheckIn_CMV__Max_Distance__c || CheckIn_CMV__Check_out_Distance__c &gt; $CustomMetadata.CheckIn_CMV__Visit_Compliance__mdt.CheckIn_CMV__Default.CheckIn_CMV__Max_Distance__c, IMAGE(&quot;/resource/CheckIn_CMV__error_icon_non_compliant&quot;, &quot;Error red X&quot;, 25, 25), IMAGE(&quot;/resource/CheckIn_CMV__success_icon_compliant&quot;, &quot;Green Check&quot;, 25, 25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows if visit is under compliance considering the current compliance rules.</inlineHelpText>
    <label>Compliance Now</label>
    <type>Text</type>
</CustomField>