force-app/main/default/objects/CheckIn_CMV__Visit__c/fields/CheckIn_CMV__Visit_Duration__c.field-meta.xml
<CustomField>
    <fullName>CheckIn_CMV__Visit_Duration__c</fullName>
    <description>Time elapsed between Check-In and Check-Out</description>
    <formula>TEXT(FLOOR((CheckIn_CMV__Check_out_Date_Time__c - CheckIn_CMV__Check_in_Date_Time__c)*24))
&amp;&apos; h &apos;&amp;
TEXT(
ROUND(
MOD(
(CheckIn_CMV__Check_out_Date_Time__c - CheckIn_CMV__Check_in_Date_Time__c)*24*60, 60
), 0
)
)
&amp;&apos; min&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Duration</label>
    <type>Text</type>
</CustomField>