force-app/main/default/objects/CheckIn_CMV__Visit__c/listViews/CheckIn_CMV__All.listView-meta.xml
<ListView>
    <fullName>CheckIn_CMV__All</fullName>
    <columns>NAME</columns>
    <columns>CheckIn_CMV__Account__c</columns>
    <columns>CheckIn_CMV__Contact__c</columns>
    <columns>CheckIn_CMV__Lead__c</columns>
    <columns>CheckIn_CMV__Opportunity__c</columns>
    <columns>CheckIn_CMV__Compliance_on_Visit__c</columns>
    <columns>CheckIn_CMV__Visit_Duration__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CheckIn_CMV__Check_in_Date_Time__c</columns>
    <columns>CheckIn_CMV__Check_out_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>