force-app/main/default/objects/CheckIn_CMV__Visit__c/listViews/CheckIn_CMV__All_Leads.listView-meta.xml
<ListView>
    <fullName>CheckIn_CMV__All_Leads</fullName>
    <columns>NAME</columns>
    <columns>CheckIn_CMV__Account__c</columns>
    <columns>CheckIn_CMV__Compliance_on_Visit__c</columns>
    <columns>CheckIn_CMV__Visit_Duration__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CheckIn_CMV__Check_in_Date_Time__c</columns>
    <columns>CheckIn_CMV__Check_out_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CheckIn_CMV__Lead__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All (Leads)</label>
</ListView>